--- a/themes/demo/pages/blog.htm
+++ b/themes/demo/pages/blog.htm
@@ -9,7 +9,7 @@ postsPerPage = 10
 noPostsMessage = "No posts found"
 sortOrder = "published_at desc"
 categoryPage = 404
-postPage = 404
+postPage = "blog-post"
 ==
 {% set posts = blogPosts.posts %}
 
