--- a/themes/olympos/pages/movies.htm
+++ b/themes/olympos/pages/movies.htm
@@ -1,11 +1,11 @@
 title = "Movies"
 url = "/movies"
 is_hidden = 0
+layout = "default"
 
 [builderList]
 modelClass = "Watchlearn\Movies\Models\Movie"
 scope = "-"
-scopeValue = "{{ :scope }}"
 displayColumn = "name"
 noRecordsMessage = "No records found"
 detailsPage = "-"
