--- a/themes/olympos/pages/movies.htm
+++ b/themes/olympos/pages/movies.htm
@@ -1,5 +1,5 @@
 title = "Movies"
-url = "/movies"
+url = "/movies/:page?"
 layout = "default"
 is_hidden = 0
 
@@ -12,6 +12,7 @@ noRecordsMessage = "No records found"
 detailsPage = "movie-single"
 detailsKeyColumn = "slug"
 detailsUrlParameter = "slug"
+recordsPerPage = 2
 pageNumber = "{{ :page }}"
 ==
 {% set records = builderList.records %}
