--- a/themes/olympos/pages/movie-single.htm
+++ b/themes/olympos/pages/movie-single.htm
@@ -1,5 +1,5 @@
 title = "Movie single"
-url = "/movie/:slug"
+url = "/movie/movie/:slug"
 layout = "default"
 is_hidden = 0
 
@@ -17,11 +17,29 @@ notFoundMessage = "Record not found"
 {% if record %}
     <h2>{{ record.name}}</h2>
 
+    <!-- <img src="{{ record.poster.path }}" alt=""> -->
+    <img src="{{ record.poster.thumb(200,auto) }}" alt="">
+
+
     <h4>{{ record.year }}</h4>
 
     <h3>Description</h3>
 
     {{ record.description|raw }}
+
+    <h3>Gallery</h3>
+
+    <ul class="gallery clearfix" >
+    {% for image in record.movie_gallery %}
+        <li style="display: inline;">
+            <a href="{{ image.path}}">
+                <img src="{{ image.thumb(80,80, {'mode':'crop'}) }}">
+            </a>
+        </li>  
+    {% endfor %}
+    </ul>
+
+
 {% else %}
     {{ notFoundMessage }}
 {% endif %}
