--- a/themes/olympos/pages/movie-single.htm
+++ b/themes/olympos/pages/movie-single.htm
@@ -39,6 +39,12 @@ notFoundMessage = "Record not found"
     {% endfor %}
     </ul>
 
+    <h3>Genres</h3>
+
+    {% for genre in record.genres %}
+        {{ genre.genre_title }}<br>
+    {% endfor %}
+
 
 {% else %}
     {{ notFoundMessage }}
