Register actors component to plugin

--- a/themes/olympos/pages/homepage.htm
+++ b/themes/olympos/pages/homepage.htm
@@ -3,13 +3,7 @@ url = "/"
 layout = "default"
 is_hidden = 0
 
-[blogPosts]
-pageNumber = "{{ :page }}"
-postsPerPage = 10
-noPostsMessage = "No posts found"
-sortOrder = "published_at desc"
-categoryPage = "blog/category"
-postPage = "blog/post"
+[actors]
 ==
 <h2>This is our homepage! Yay!</h2>
 
@@ -23,4 +17,4 @@ postPage = "blog/post"
 <p>Autem saepe dicta quae perferendis, nihil, praesentium nesciunt eum aspernatur fugit eaque optio reprehenderit, expedita quos at vel doloremque nobis.</p>
 <p>Tenetur iure quidem ratione perferendis molestias repudiandae officiis consequatur repellat perspiciatis nulla, dolorum incidunt rem assumenda minus exercitationem. Ea, accusamus!</p>
 <p>Nihil laborum quasi ab harum omnis deserunt debitis distinctio laboriosam odit, vero explicabo voluptate veritatis facilis aliquid voluptatibus inventore. Perferendis.</p>
-{% component 'blogPosts' %}
+{% component 'actors' %}
