Cancel Acme plugin tentative

--- a/themes/olympos/pages/homepage.htm
+++ b/themes/olympos/pages/homepage.htm
@@ -2,6 +2,10 @@ title = "Homepage"
 url = "/"
 layout = "default"
 is_hidden = 0
+
+[actors]
+results = 0
+sortOrder = "name asc"
 ==
 <h2>This is our homepage! Yay!</h2>
 
@@ -15,3 +19,4 @@ is_hidden = 0
 <p>Autem saepe dicta quae perferendis, nihil, praesentium nesciunt eum aspernatur fugit eaque optio reprehenderit, expedita quos at vel doloremque nobis.</p>
 <p>Tenetur iure quidem ratione perferendis molestias repudiandae officiis consequatur repellat perspiciatis nulla, dolorum incidunt rem assumenda minus exercitationem. Ea, accusamus!</p>
 <p>Nihil laborum quasi ab harum omnis deserunt debitis distinctio laboriosam odit, vero explicabo voluptate veritatis facilis aliquid voluptatibus inventore. Perferendis.</p>
+{% component 'actors' %}
